Fix copy typos on 102 What's New page.

--- a/website/thunderbird/102.0/whatsnew/index.html
+++ b/website/thunderbird/102.0/whatsnew/index.html
@@ -17,7 +17,7 @@
 
       <div class="flex flex-col items-center mb-20 mx-auto xl:ml-0 xl:mr-0 max-w-xl bg-grey p-4 rounded shadow-lg text-black-light no-underline md:font-md">
         <p class="tracking-wide leading-normal m-0 text-center">
-          {{ _('<strong>Thunderbird is completely funded by your donations.</strong> <br> Producing Thunderbird requires software engineers, designers, system administrators and server infrastructure. <strong>Help us keep Thundebird alive!</strong>') }}
+          {{ _('<strong>Thunderbird is completely funded by your donations.</strong> <br> Producing Thunderbird requires software engineers, designers, system administrators and server infrastructure. <strong>Help us keep Thunderbird alive!</strong>') }}
         </p>
         <a href="{{ donate_url('cta', 'whats_new_page', 'thunderbird', 'whats_new_102') }}" class="btn-donate-lg mt-4">
           <span class="inline-block w-5 mr-1">{{ svg('heart') }}</span>
@@ -96,7 +96,7 @@
           {{ _('New Spaces Toolbar')}}
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-10">
-          {{ _('Thunderbird 102 makes navigating the application more intuitive thanks to the the new Spaces Toolbar. Move between all of your activities with ease, whether it’s managing email, working with contacts through the awesome new address book, using the calendar and tasks functionality, chat, and even add-ons! If you want to save screen real estate, the Spaces Toolbar can be dismissed, and you can instead navigate the different activities Thunderbird offers with the new Pinned Spaces tab.') }}
+          {{ _('Thunderbird 102 makes navigating the application more intuitive thanks to the new Spaces Toolbar. Move between all of your activities with ease, whether it’s managing email, working with contacts through the awesome new address book, using the calendar and tasks functionality, chat, and even add-ons! If you want to save screen real estate, the Spaces Toolbar can be dismissed, and you can instead navigate the different activities Thunderbird offers with the new Pinned Spaces tab.') }}
         </p>
       </aside>
       <aside class="flex-1 lg:ml-8">
