--- a/website/thunderbird/102.0/eoy/index.html
+++ b/website/thunderbird/102.0/eoy/index.html
@@ -66,6 +66,7 @@
         <div id="pill-7" class="pill"></div>
         <div id="pill-8" class="pill"></div>
         <div id="pill-9" class="pill"></div>
+        <div id="pill-10" class="pill"></div>
       </div>
       <div class="text-right accent-text self-end">
         {{ _('Help keep') }}
