fix translation strings and dry

--- a/website/thunderbird/102.0/eoy/index.html
+++ b/website/thunderbird/102.0/eoy/index.html
@@ -22,9 +22,7 @@
   <section id="initAppeal" class="text-left font-xl pl-8 pr-8 md:pl-16 md:pr-16 max-w-8xl mx-auto pt-12">
     <aside>
       <h1 class="accent-text">
-        <span class="font-light">{{ _('Help Keep')}}</span>
-        <br>
-        <span>{{ _('Thunderbird Alive!')}}</span>
+        {{ _('<span class="block font-light">Help Keep</span> Thunderbird Alive!')}}
       </h1>
       <p>
         {{ _('Did you know that <strong>less than 1%</strong> of Thunderbird users fund all the work we do?')}}
@@ -52,9 +50,7 @@
   <div class="letter-container">
     <a href="https://give.thunderbird.net/?utm_source=thunderbird-client&utm_medium=referral&utm_content=EOY22" class="donate-banner">
       <div>
-        {{ _('Click here to') }}
-        <br>
-        <strong>{{ _('Donate!') }}</strong>
+        {{ _('Click here to <strong class="block">Donate!</strong>') }}
       </div>
       <div id="decoration">
         <div id="pill-1" class="pill"></div>
@@ -69,9 +65,7 @@
         <div id="pill-10" class="pill"></div>
       </div>
       <div class="text-right accent-text self-end">
-        {{ _('Help keep') }}
-        <br>
-        <strong>{{ _('Thunderbird Alive!') }}</strong>
+        {{ _('Help keep <strong class="block">Thunderbird Alive!</strong>') }}
       </div>
     </a>
     <p>
