Update outdated-page's style and warning with a link to a support article. (Fixes #170)

--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -10,6 +10,7 @@
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
     <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
+    {% block additional_head %}{% endblock %}
   </head>
   <body class="start-bg">
     <main>
