Hook up the FRU donation form redirect with all (known) donation buttons

--- a/website/thunderbird/102.0/whatsnew/index.html
+++ b/website/thunderbird/102.0/whatsnew/index.html
@@ -19,7 +19,7 @@
         <p class="tracking-wide leading-normal m-0 text-center">
           {{ _('<strong>Thunderbird is completely funded by your donations.</strong> <br> Producing Thunderbird requires software engineers, designers, system administrators and server infrastructure. <strong>Help us keep Thunderbird alive!</strong>') }}
         </p>
-        <a href="{{ donate_url('cta', 'whats_new_page', 'thunderbird', 'whats_new_102') }}" class="btn-donate-lg mt-4">
+        <a href="{{ donate_url('cta', 'whats_new_page', 'thunderbird', 'whats_new_102') }}" class="btn-donate-lg mt-4" data-donate-btn>
           <span class="inline-block w-5 mr-1">{{ svg('heart') }}</span>
           {{ _('Donate') }}
         </a>
