--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -18,7 +18,7 @@
       </p>
 
       <div class="flex mb-20">
-        <a href="{{ donate_url('home_page_body') }}" class="btn-donate btn-donate-whatsnew font-lg">
+        <a href="{{ donate_url('home_page_body') }}" class="btn-donate btn-donate-whatsnew font-lg" data-donate-btn>
           <span class="inline-block w-4 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
         </a>
       </div>
