--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -15,7 +15,7 @@
 {% block content %}
   <section class="pt-10 pb-10 flex justify-between items-center pr-8 pl-8">
     <section class="flex justify-between mx-auto">
-      <aside class="flex flex-col flex-1 mr-8 ml-8 lg:mr-16 lg:ml-16 lg:pt-12 lg:max-w-4xl">
+      <aside class="flex flex-col flex-1 mr-2 ml-2 sm:mr-8 sm:ml-8 lg:mr-16 lg:ml-16 lg:max-w-4xl">
         <p class="font-lg tracking-wider leading-loose mb-6">
           {{ _('See exciting previews of upcoming features, read the latest desktop Thunderbird and mobile Thunderbird news, and enjoy personalized tips to protect your privacy and maximize your productivity! From the Thunderbird team directly to your inbox.') }}
         </p>
