Allow any page to hide the header via the `hide_header` template variable

--- a/website/thunderbird/102.0/whatsnew/index.html
+++ b/website/thunderbird/102.0/whatsnew/index.html
@@ -3,6 +3,7 @@
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
 {% set active_page = "whatsnew" %}
+{% set hide_header = True %}
 {% extends "_includes/base-resp.html" %}
 
 {% block page_title %}{{ _('What’s New in Thunderbird 102') }}{% endblock %}
