--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{% set active_page = "newsletter" %}
+{% set hide_header = True %}
 {% extends "_includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Join our Newsletter!') }}{% endblock %}
