--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -4,30 +4,65 @@
 
 {% set active_page = "newsletter" %}
 {% set hide_header = True %}
+{% set hide_social_footer = True %}
 {% extends "_includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Join our Newsletter!') }}{% endblock %}
 
 {% block header_content %}
-  <section class="text-left text-white flex flex-col items-start xl:w-full max-w-6xl mx-auto pl-8 pr-8">
-    <h1 class="font-hero font-thin mt-10 mb-16">{{ self.page_title() }}</h1>
-  </section>
-{% endblock %}
-
-{% block content %}
-  <section class="pt-10 pb-10 flex justify-between items-center pr-8 pl-8">
-    <section class="flex justify-between mx-auto">
-      <aside class="flex flex-col flex-1 mr-2 ml-2 sm:mr-8 sm:ml-8 lg:mr-16 lg:ml-16 lg:max-w-4xl">
-        <p class="font-lg tracking-wider leading-loose mb-6">
+  <section class="text-left text-white flex justify-between pl-8 pr-8 md:pl-16 md:pr-16 max-w-7xl mx-auto pt-12 mb-20">
+    <aside class="flex-col items-start">
+      <h1 class="font-4xl md:font-hero font-thin mt-0 mb-8">{{ self.page_title() }}</h1>
+      <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl lg:mb-16 mb-8 mt-0 p-links">
           {{ _('See exciting previews of upcoming features, read the latest desktop Thunderbird and mobile Thunderbird news, and enjoy personalized tips to protect your privacy and maximize your productivity! From the Thunderbird team directly to your inbox.') }}
-        </p>
-        <div class="max-w-lg">
+      </p>
+
+      <div class="flex flex-col items-center mb-20 mx-auto xl:ml-0 xl:mr-0 max-w-xl bg-grey p-4 rounded shadow-lg text-black-light no-underline md:font-md">
+        <div class="w-full">
         {% include '_includes/newsletter-form.html' %}
         </div>
         <p class="font-sm font-semibold self-start">
           <a class="small-link font-regular text-blue" href="https://us12.campaign-archive.com/home/?u=f8051cc8637cf3ff79661f382&id=56428f2efc" title="View previous newsletters">{{ _('View previous newsletters') }}</a>
         </p>
-      </aside>
-    </section>
+      </div>
+
+      <ul class="list-none p-0 flex flex-wrap items-center justify-around">
+        <li class="m-1">
+          <a class="social-link-large font-semibold" title="{{ _('Follow %(twitter)s on Twitter')|format(twitter='@mozthunderbird') }}"
+            href="https://twitter.com/mozthunderbird" data-link-type="footer" data-link-name="Twitter (Thunderbird)">
+            <span>{{ svg('twitter') }}</span>
+            @mozthunderbird
+          </a>
+        </li>
+        <li class="m-1">
+          <a class="social-link-large font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
+            data-link-name="Facebook (Thunderbird)">
+            <span>{{ svg('facebook') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li class="m-1">
+          <a class="social-link-large font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
+            href="https://www.youtube.com/channel/UCuMTCmnwZPiXXVIy_TW6Bnw" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
+            <span>{{ svg('youtube') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li class="m-1">
+          <a class="social-link-large font-semibold" title="{{ _('Follow %(linkedin)s on LinkedIn')|format(linkedin='thunderbird-email')}}"
+            href="https://www.linkedin.com/company/thunderbird-email/" data-link-type="footer" data-link-name="LinkedIn (Thunderbird)" rel="me">
+            <span>{{ svg('linkedin') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li class="m-1">
+          <a class="social-link-large font-semibold" title="{{ _('Follow %(mastodon)s on Mastodon')|format(mastodon='@thunderbird@mastodon.online') }}"
+            href="https://mastodon.online/@thunderbird" data-link-type="footer" data-link-name="Mastodon (Thunderbird)" rel="me">
+            <span>{{ svg('mastodon') }}</span>
+            @thunderbird@mastodon.online
+          </a>
+        </li>
+      </ul>
+    </aside>
   </section>
 {% endblock %}
