--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -7,17 +7,18 @@
 {% set hide_social_footer = True %}
 {% extends "_includes/base-resp.html" %}
 
-{% block page_title %}{{ _('Join our Newsletter!') }}{% endblock %}
+{% block page_title %}{{ _('Join our Newsletter') }}{% endblock %}
 
 {% block header_content %}
-  <section class="text-left text-white flex justify-between pl-8 pr-8 md:pl-16 md:pr-16 max-w-7xl mx-auto pt-12 mb-20">
+  <section class="text-center text-white flex justify-between pl-8 pr-8 md:pl-16 md:pr-16 max-w-7xl mx-auto pt-12 mb-20">
     <aside class="flex-col items-start">
       <h1 class="font-4xl md:font-hero font-thin mt-0 mb-8">{{ self.page_title() }}</h1>
-      <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl lg:mb-16 mb-8 mt-0 p-links">
+      <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl lg:mb-16 mb-8 mt-0 p-links mx-auto">
           {{ _('See exciting previews of upcoming features, read the latest desktop Thunderbird and mobile Thunderbird news, and enjoy personalized tips to protect your privacy and maximize your productivity! From the Thunderbird team directly to your inbox.') }}
       </p>
 
-      <div class="flex flex-col items-center mb-20 mx-auto xl:ml-0 xl:mr-0 max-w-xl bg-grey p-4 rounded shadow-lg text-black-light no-underline md:font-md">
+
+      <div class="flex flex-col items-center mb-20 mx-auto max-w-xl bg-grey p-4 rounded shadow-lg text-black-light no-underline md:font-md">
         <div class="w-full">
         {% include '_includes/newsletter-form.html' %}
         </div>
