Fold some inline css into our less files, increase legibility with colours, and tighten up the graphics on our newsletter form.

--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -17,12 +17,12 @@
           {{ _('See exciting previews of upcoming features, read the latest desktop Thunderbird and mobile Thunderbird news, and enjoy personalized tips to protect your privacy and maximize your productivity! From the Thunderbird team directly to your inbox.') }}
       </p>
 
-      <div class="flex flex-col items-center mb-20 mx-auto max-w-xl bg-grey p-4 rounded shadow-lg text-black-light no-underline md:font-md">
+      <div class="flex flex-col items-center mb-20 mx-auto max-w-xl p-4 text-black-light no-underline md:font-md">
         <div class="w-full">
         {% include '_includes/newsletter-form.html' %}
         </div>
-        <p class="font-sm font-semibold self-start">
-          <a class="small-link font-regular text-blue" href="https://us12.campaign-archive.com/home/?u=f8051cc8637cf3ff79661f382&id=56428f2efc" title="View previous newsletters">{{ _('View previous newsletters') }}</a>
+        <p class="font-sm font-bold self-start">
+          <a class="small-link font-regular" href="https://us12.campaign-archive.com/home/?u=f8051cc8637cf3ff79661f382&id=56428f2efc" title="View previous newsletters">{{ _('View previous newsletters') }}</a>
         </p>
       </div>
 
