Small tweaks to enhance mobile view, and override newsletter page's body id so we can fix the ugly white space on wiiiide displays.

--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -9,6 +9,8 @@
 
 {% block page_title %}{{ _('Join our Newsletter') }}{% endblock %}
 
+{% block body_id %}thunderbird-newsletter{% endblock %}
+
 {% block header_content %}
   <section class="text-center text-white flex justify-between pl-4 pr-4 sm:pl-8 sm:pr-8 md:pl-16 md:pr-16 max-w-7xl mx-auto pt-12 mb-20">
     <aside class="flex-col items-start">
