Update the donation modal links and tweak some styles relating to the FAQ on donation page.

--- a/website/donate/index.html
+++ b/website/donate/index.html
@@ -47,7 +47,7 @@
         </p>
       </aside>
       <aside class="flex-1 max-w-xl text-center mx-auto w-full">
-          <a href="#XVFNMBAK" style="display: none"></a>
+        <a href="#XVFNMBAK" style="display: none"></a>
       </aside>
     </section>
   </section>
@@ -58,8 +58,9 @@
     <span class="header-line flex-1"></span>
   </section>
 
+
   <section class="pb-10 flex justify-between pr-4 pl-4 max-w-6xl items-center mx-auto">
-      <aside class="mr-8 ml-8 lg:ml-16 lg:mr-16 lg:pt-12 ">
+      <aside class="mr-8 ml-8 lg:ml-16 lg:mr-16 lg:pt-12 w-full">
         {% include '_includes/faq.html' %}
       </aside>
     </section>
