--- a/website/donate/index.html
+++ b/website/donate/index.html
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Give to Thunderbird') }}{% endblock %}
 
@@ -60,7 +60,7 @@
 
   <section class="pb-10 flex justify-between pr-4 pl-4 max-w-6xl items-center mx-auto">
       <aside class="mr-8 ml-8 lg:ml-16 lg:mr-16 lg:pt-12 ">
-        {% include '_includes/faq.html' %}
+        {% include 'includes/faq.html' %}
       </aside>
     </section>
   </section>
@@ -73,7 +73,7 @@
 
   <section class="pb-10 flex justify-between pr-4 pl-4 max-w-6xl items-center mx-auto">
       <aside class="mr-8 ml-8 lg:ml-16 lg:mr-16 lg:pt-12 ">
-        {% include '_includes/ways-to-give.html' %}
+        {% include 'includes/ways-to-give.html' %}
       </aside>
     </section>
   </section>
