--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Thunderbird for Organizations') }}{% endblock %}
 {% block page_desc %}{{ _('Thunderbird Support for Your Organization, Business, or Enterprise') }}{% endblock %}
@@ -99,6 +99,6 @@
     </section>
   </section>
 
-  {% include '_includes/site-prefooter.html' %}
+  {% include 'includes/site-prefooter.html' %}
 
 {% endblock %}
