--- a/website/thunderbird/all/index.html
+++ b/website/thunderbird/all/index.html
@@ -2,8 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 {% set channel = 'release' %}
-{% from "_includes/product-all-macros.html" import build_table with context %}
-{% extends "_includes/base-resp.html" %}
+{% from "includes/_enonly/product-all-macros.html" import build_table with context %}
+{% extends "includes/base-resp.html" %}
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
@@ -87,5 +87,5 @@
     </section>
   </section>
 
-  {% include '_includes/site-prefooter.html' %}
+  {% include 'includes/site-prefooter.html' %}
 {% endblock %}
