--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Lightning Calendar') }}{% endblock %}
 {% block page_desc %}{{ _('Organize your life — it&rsquo;s about time!') }}{% endblock %}
@@ -101,5 +101,5 @@
     </section>
   </section>
 
-  {% include '_includes/site-prefooter.html' %}
+  {% include 'includes/site-prefooter.html' %}
 {% endblock %}
