--- a/website/newsletter/index.html
+++ b/website/newsletter/index.html
@@ -5,7 +5,7 @@
 {% set active_page = "newsletter" %}
 {% set hide_header = True %}
 {% set hide_social_footer = True %}
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title %}{{ _('Join our Newsletter') }}{% endblock %}
 
@@ -21,7 +21,7 @@
 
       <div class="flex flex-col items-center mb-20 mx-auto max-w-xl p-4 text-black-light no-underline md:font-md">
         <div class="w-full">
-        {% include '_includes/newsletter-form.html' %}
+        {% include 'includes/newsletter-form.html' %}
         </div>
         <p class="font-sm font-bold self-start">
           <a class="small-link font-regular" href="https://us12.campaign-archive.com/home/?u=f8051cc8637cf3ff79661f382&id=56428f2efc" title="View previous newsletters">{{ _('View previous newsletters') }}</a>
