--- a/website/thunderbird/68.0/whatsnew/index.html
+++ b/website/thunderbird/68.0/whatsnew/index.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title %}{{ _('New in Thunderbird 68') }}{% endblock %}
 
@@ -75,6 +75,6 @@
     </aside>
   </section>
 
-  {% include '_includes/donate-mailing-list.html' %}
+  {% include 'includes/donate-mailing-list.html' %}
 
 {% endblock %}
