--- a/website/download/index.html
+++ b/website/download/index.html
@@ -7,24 +7,30 @@
 
 {% block page_title_prefix %}{{_('Thunderbird')}} — {% endblock %}
 {% block page_title %}{{ _('Download Thunderbird') }}{% endblock %}
-{% block page_desc %}{{ _('Your download should begin automatically. Didn’t work? Try the button below!') }}{% endblock %}
+{% block page_desc %}{{ _('Thank you for downloading and installing Thunderbird!') }}{% endblock %}
 
-{% block body_id %}thunderbird-download{% endblock %}
+{% block body_id %}thunderbird-post-download{% endblock %}
 
 {% block header_content %}
-<section class="text-center text-white flex flex-col items-center mb-12 pr-4 pl-4">
-    <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
-    <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-xl mb-8 md:mb-16">{{ self.page_desc() }}</p>
-    <div class="tracking-wider">
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
-    </div>
-  </section>
-  <section class="hidden md:flex max-w-5xl self-center">
-    {{ platform_img('thunderbird/landing/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
-  </section>
+  <div class="flex flex-col" style="min-height: 70vh">
+    <section class="text-center text-white mx-auto my-auto">
+      <p class="font-3xl tracking-wide max-w-4xl"><span class="mb-2 font-hero" style="display: block;">{{ _('Just one more step!') }}</span>{{ _('Finish installing, and start enjoying Thunderbird.') }}</p>
+      <p class="tracking-wider">
+        {{ _('Having trouble? <a class="inline-link" href="%(url)s">Get help with your installation.</a>'|format(url=https://support.mozilla.org/products/thunderbird/install-migrate-and-update) }}
+      </p>
+    </section>
+
+  </div>
 {% endblock %}
 
 {% block content %}
+
+<section class="bg-black-light text-center text-white flex flex-col items-center pr-4 pl-4">
+  <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-xl mb-0">{{ _('Your download didn't start automatically?') }}</p>
+  <div class="tracking-wider mb-2">
+    {{ download_thunderbird(force_direct=true, alt_copy=_('Click here to try again'), button_class='btn-link', hide_footer_links=True) }}
+  </div>
+</section>
 
 <div itemscope itemtype="http://schema.org/SoftwareApplication">
   <meta itemprop="name" content="{{_('Thunderbird')}}">
