Enable A/B testing on Start Page (Fixes #395)  - Builds and attaches a JS bundle for start-page (only contains ab-test and donation modules)  - Adjusted javascript to redirect if `data-donate-redirect` attribute is found on the donation button  - This redirect is sadly hardcoded for production  - Removed an intentional javascript error if window.FundraiseUp is missing since start-page won't have it

--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -18,5 +18,6 @@
     <main>
       {% block main %}{% endblock %}
     </main>
+    <script type="text/javascript" src="/media/js/common-bundle.js" charset="utf-8"></script>
   </body>
 </html>
