--- a/start-page/_new-base-resp.html
+++ b/start-page/_new-base-resp.html
@@ -10,6 +10,7 @@
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
     <link href="/media/css/new-start-style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="/media/js/common-bundle.js" charset="utf-8"></script>
   </head>
   <body class="start-bg">
     <main>
@@ -21,5 +22,6 @@
     <div class="logo-wireframe-dark">
       {{ svg('logo-wireframe-dark') }}
     </div>
+    <script type="text/javascript" src="/media/js/common-bundle.js" charset="utf-8"></script>
   </body>
 </html>
