--- a/website/download/beta/index.html
+++ b/website/download/beta/index.html
@@ -29,7 +29,7 @@
 
 {% block content %}
   <div class="justify-center flex">
-    {{ download_thunderbird(force_direct=true, alt_copy=_('Download Beta'), channel='beta', flex_class='justify-center') }}
+    {{ download_thunderbird(force_direct=true, alt_copy=_('Download Beta'), channel='beta', flex_class='justify-center', section='body') }}
   </div>
   <section id="shouldi" class="mt-20 mb-4 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
     <span class="header-line flex-1"></span>
