--- a/website/download/index.html
+++ b/website/download/index.html
@@ -16,7 +16,16 @@
     <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">{{ self.page_title() }}</h1>
     <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-xl mb-8 md:mb-16">{{ self.page_desc() }}</p>
     <div class="tracking-wider">
-      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
+      <!-- Hide all the possible channels, so we can later show the one we want. -->
+      <div id="esr" class="hidden">
+      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download'), flex_class='justify-center') }}
+      </div>
+      <div id="beta" class="hidden">
+      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download'), channel='beta', flex_class='justify-center') }}
+      </div>
+      <div id="daily" class="hidden">
+      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download'), channel='daily', flex_class='justify-center') }}
+      </div>
     </div>
   </section>
   <section class="hidden md:flex max-w-5xl self-center">
